--- a/analyse.tex
+++ b/analyse.tex
@@ -480,7 +480,7 @@ Nom & Rôle & Actions & Data In & Data Out \\ \hline
 
 
 \appendix
-\renewcommand{\partname}{Appendix}
+\renewcommand{\partname}{Annexe}
 \setcounter{part}{0}%Reset counter
 \part{Règlement cadre}\label{an:regl-cadre}
 \includepdf[pages={-}]{annexes/Reglement-cadre_Evaluation_Enseignements_v1_1.pdf}
